...
    String email = _emailController.text.trim();
    String password = _passwordController.text.trim();

    if (email.isEmpty || password.isEmpty) {
      // Show error if fields are empty
      ScaffoldMessenger.of(context).showSnackBar(SnackBar(
        content: Text('Please enter both email and password.'),
      ));
      return;
    }

    try {
      // Call the login method from AuthService
...
              blurRadius: 5,
              offset: Offset(0, 3),
            )
          ],
        ),
        alignment: Alignment.center,
        child: Text('Login Now', style: LoginTextStyles.loginButton),
      ),
    );
  }
}

